--- a/Groupomania/src/style.css
+++ b/Groupomania/src/style.css
@@ -9,6 +9,9 @@
   html {
     @apply w-full p-0 m-0 font-lato;
   }
+  a {
+    @apply no-underline text-black;
+  }
   h1,
   h2 {
     @apply text-center font-bold;
@@ -227,7 +230,7 @@
     @apply sm:w-10/12;
   }
   .active {
-    @apply bg-tertiarygroup px-3 rounded-2xl;
+    @apply bg-tertiarygroup bg-opacity-20 px-3 rounded-2xl;
   }
   .postcard-container {
     @apply bg-secondgroup relative  p-4 mb-8 mx-auto  shadow-lg shadow-black;
