--- a/Groupomania/src/style.css
+++ b/Groupomania/src/style.css
@@ -54,66 +54,11 @@
   }
 }
 @layer components {
-  .admin,
-  .home-container,
-  .post,
-  .pagination-bar,
-  .pagination-posts,
-  .pagination-posts_card {
-    @apply w-full;
-  }
-  .post-utils,
-  .sign-form--btn,
-  .postcard-container {
-    @apply rounded-lg;
-  }
-  .admin-list,
-  .admin-list_data,
-  .navigation,
-  .sign-form_display {
-    @apply justify-between;
-  }
-  .admin-list_id,
-  .profil-btn_switch,
-  .postcard-likes_counter,
-  .comment-btn_delete,
-  .likes-modal_bg {
-    @apply absolute;
-  }
-  .postcard-user,
-  .pagination-bar,
-  .navigation-nav,
-  .navigation-logo,
-  .post-utils {
-    @apply flex-row;
-  }
-  .postcard,
-  .postcard-container,
-  .admin-list,
-  .comment {
-    @apply relative;
-  }
-  .nofound-txt,
-  .sign-btn_blue,
-  .sign-form--btn,
-  .error,
-  .succes,
-  .postcard-date_txt,
-  .postcard-likes_counter,
-  .comment_date,
-  .comment-user {
-    @apply font-bold;
-  }
   .comment-form,
   .profil-form_modify,
   .post-form_create,
   .post-form_modify {
     @apply border-none text-white;
-  }
-  .profil-form_modify,
-  .post-form_create,
-  .post-form_modify {
-    @apply w-11/12;
   }
   .admin-list {
     @apply w-80 sm:w-9/12 rounded-xl bg-tertiarygroup bg-opacity-50 my-2 py-8 px-2;
@@ -180,7 +125,7 @@
     @apply flex my-0 w-10/12 sm:w-96 justify-center sm:justify-end md:justify-end md:mx-3;
   }
   .navigation-btn {
-    @apply text-white border-0 rounded m-1 contrast-125  py-1 px-3 h-12 transition ease-in-out delay-150;
+    @apply text-xs sm:text-lg text-white border-0 rounded m-1 contrast-125  py-1 px-3 h-12 transition ease-in-out delay-150;
   }
   .navigation-btn_icon {
     @apply w-4 mr-2;
@@ -221,7 +166,6 @@
   .succes {
     @apply text-center;
   }
-
   .succes {
     @apply text-green-500;
   }
@@ -235,7 +179,7 @@
     @apply text-center rounded content-center;
   }
   .pagination-btn {
-    @apply flex font-extrabold w-fit p-1 sm:p-2 mx-0 sm:mx-1 rounded border-gray-500;
+    @apply mx-2 flex font-extrabold w-fit p-1 sm:p-2 sm:mx-1 rounded border-gray-500;
   }
   .pagination-posts {
     @apply flex flex-col items-center justify-center;
@@ -250,16 +194,16 @@
     @apply bg-secondgroup   p-4 mb-8   shadow-lg shadow-black;
   }
   .postcard {
-    @apply cursor-pointer  bg-white   rounded p-4 w-11/12   my-0 sm:my-3;
+    @apply cursor-pointer  bg-white   rounded p-4 w-56 h-96 sm:w-11/12 sm:h-fit   my-0 sm:my-3;
   }
   .postcard-title {
     @apply my-0  sm:mt-8 mb-5;
   }
   .postcard-img {
-    @apply object-fill border-black w-60 h-60 sm:w-72 sm:h-72 md:w-96 md:h-72;
+    @apply object-fill border-black w-52 h-52 sm:w-72 sm:h-72 md:w-96 md:h-72;
   }
   .postcard-user {
-    @apply justify-start mt-4  mb-2 h-14;
+    @apply justify-start sm:mt-4  mb-2 h-14;
   }
   .postcard-user_name {
     @apply text-sm  sm:text-base;
@@ -275,7 +219,7 @@
     @apply items-start;
   }
   .postcard-date_txt {
-    @apply w-1/3;
+    @apply w-32 sm:w-1/3;
   }
   .postcard-likes_counter {
     @apply w-20  bottom-0 right-3 text-right;
