--- a/Groupomania/src/style.css
+++ b/Groupomania/src/style.css
@@ -82,7 +82,7 @@
     @apply text-red-600;
   }
   .active {
-    @apply bg-tertiarygroup bg-opacity-20 px-3 rounded-2xl;
+    @apply bg-opacity-20;
   }
   .admin-list {
     @apply w-80 sm:w-9/12 rounded-xl bg-tertiarygroup bg-opacity-50 my-2 py-8 px-2;
@@ -151,20 +151,8 @@
   .likes-btn_show {
     @apply w-72 flex justify-center items-center;
   }
-  .navigation {
-    @apply p-0 md:flex-row md:px-16 md:py-24 border-solid border-b-2 border-black;
-  }
-  .navigation-logo {
-    @apply w-64  flex h-16 object-cover lg:w-72 md:mx-0;
-  }
-  .navigation-nav {
-    @apply flex my-0 w-10/12 sm:w-96 justify-center sm:justify-end md:justify-end md:mx-3;
-  }
   .navigation-btn {
     @apply text-xs sm:text-lg text-white border-0 rounded m-1 contrast-125  py-1 px-3 h-12 transition ease-in-out delay-150;
-  }
-  .navigation-btn_icon {
-    @apply w-4 mr-2;
   }
   .nofound-title {
     @apply text-2xl font-extrabold;
@@ -179,7 +167,7 @@
     @apply text-xl;
   }
   .pagination {
-    @apply my-3;
+    @apply mt-3 mb-8;
   }
   .pagination-item {
     @apply inline-block mb-10  rounded;
@@ -208,39 +196,11 @@
   .post-form_modify {
     @apply bg-tertiarygroup;
   }
-  .postcard-container {
-    @apply p-4 mb-8 border-black border-solid border-2  sm:w-3/4;
-  }
-  .postcard {
-    @apply cursor-pointer  bg-white   p-4 w-56 h-96 sm:w-11/12 sm:h-fit   my-0 sm:my-3;
-  }
-  .postcard-title {
-    @apply my-0  sm:mt-8 mb-5;
-  }
-  .postcard-img {
-    @apply object-fill mb-3 border-black w-72 h-52 sm:w-10/12 sm:h-72 md:w-11/12 md:h-72;
-  }
-  .postcard-user {
-    @apply justify-start sm:mt-4  mb-2 h-14;
-  }
-  .postcard-user_name {
-    @apply text-sm  sm:text-base;
-  }
-  .postcard-user_img {
-    @apply w-8 h-8 sm:w-20 sm:h-20 border-solid border-4 border-red-400 rounded-full mx-2;
-  }
-
-  .postcard-date_txt {
-    @apply w-32 sm:w-1/3 text-right;
-  }
-  .postcard-likes_counter {
-    @apply w-20  bottom-0 right-3 text-right;
-  }
   .profil {
     @apply mt-10 mb-16  text-base w-11/12 bg-tertiarygroup text-white rounded-2xl;
   }
   .profil-btn_switch {
-    @apply right-3 top-3 z-20  p-3 rounded-xl bg-gray-200 font-bold hover:-translate-y-1 hover:scale-90 hover:bg-secondgroup duration-300;
+    @apply right-3 top-3 z-10  p-3 rounded-xl bg-gray-200 font-bold hover:-translate-y-1 hover:scale-90 hover:bg-secondgroup duration-300;
   }
   .profil-user {
     @apply py-10;
