--- a/Groupomania/src/style.css
+++ b/Groupomania/src/style.css
@@ -66,6 +66,7 @@
   .navigation-btn {
     @apply bg-primarygroup;
   }
+
   .post-btn_delete,
   .post-btn_modify {
     @apply border-transparent  bg-white py-3 px-4 w-24 sm:w-52 h-4;
@@ -113,6 +114,27 @@
   .limit {
     @apply sm:w-[500px] md:w-[670px] lg:w-[700px];
   }
+  .liked {
+    @apply text-red-600;
+  }
+  .likes_heart {
+    @apply text-gray-400 w-5 text-xl hover:-translate-y-1 hover:scale-125 duration-300;
+  }
+  .likes-modal_bg {
+    @apply top-0 left-0 right-0 bottom-0 w-screen fixed h-screen bg-slate-400 bg-opacity-50;
+  }
+  .likes-modal_content {
+    @apply bg-white p-12 rounded-xl blur-0 w-1/2;
+  }
+  .likes-modal_link {
+    @apply w-36;
+  }
+  .likes {
+    @apply flex-row w-full justify-between;
+  }
+  .likes-btn_show {
+    @apply w-[250px] flex justify-center items-center hover:-translate-y-1 hover:scale-90 hover:bg-gray-300 duration-300;
+  }
   .form-control {
     @apply mt-2;
   }
@@ -137,11 +159,56 @@
   .navigation-btn_icon {
     @apply w-4 mr-2;
   }
+  .pagination {
+    @apply mt-3 mb-8;
+  }
+  .pagination-item {
+    @apply inline-block mb-10  rounded;
+  }
+  .pagination-bar {
+    @apply text-center rounded content-center w-full flex-row;
+  }
+  .pagination-btn {
+    @apply mx-2 flex border-solid border-2 w-fit p-1 sm:p-2 sm:mx-1 rounded bg-white border-gray-500;
+  }
   .pagination-posts {
     @apply flex flex-col items-center justify-center w-full;
   }
   .pagination-posts_card {
     @apply sm:w-10/12 w-full;
+  }
+  .postcard-container {
+    @apply h-[420px] sm:h-[470px] md:h-[570px] lg:h-[600px]  my-2 bg-white border-black border-solid border-2 relative rounded-lg;
+  }
+  .postcard-a {
+    @apply absolute right-0 left-0 bottom-6;
+  }
+  .postcard {
+    @apply cursor-pointer    p-4 w-56 h-96 sm:w-11/12 sm:h-fit   my-0 sm:my-3;
+  }
+  .postcard-title {
+    @apply my-0  sm:mt-8 mb-1;
+  }
+  .postcard-img {
+    @apply object-fill mb-3 border-black w-full h-64 sm:h-72 md:h-[400px];
+  }
+  .postcard-user {
+    @apply justify-start sm:mt-4  mb-2 h-14 absolute top-4 left-4 flex-row;
+  }
+  .postcard-user_name {
+    @apply text-sm  sm:text-base;
+  }
+  .postcard-user_img {
+    @apply w-10 h-10 sm:w-20 sm:h-20 border-solid border-4 border-red-400 rounded-full mx-2;
+  }
+  .postcard-date {
+    @apply absolute top-1 right-4 w-72 font-bold text-right;
+  }
+  .postcard-date_txt {
+    @apply w-32 sm:w-1/3 text-right;
+  }
+  .postcard-likes_counter {
+    @apply flex w-60 bottom-0 right-2 text-right font-bold absolute;
   }
   .post-utils {
     @apply flex-row rounded-lg  w-full my-5 p-4 justify-evenly  bg-tertiarygroup bg-opacity-80 shadow-md shadow-black;
