--- a/Groupomania/src/style.css
+++ b/Groupomania/src/style.css
@@ -54,6 +54,9 @@
   }
 }
 @layer components {
+  .app {
+    @apply w-full min-h-screen bg-groupomania bg-fixed bg-origin-border bg-no-repeat bg-center mt-44 sm:mt-24;
+  }
   .comment-form,
   .profil-form_modify,
   .post-form_create,
@@ -91,16 +94,16 @@
     @apply bg-opacity-20;
   }
   .admin-list {
-    @apply w-80 sm:w-9/12 rounded-xl bg-tertiarygroup bg-opacity-50 my-2 py-8 px-2;
+    @apply w-80 sm:w-9/12 rounded-xl relative justify-between bg-tertiarygroup bg-opacity-50 my-2 py-8 px-2;
   }
   .admin-list_id {
-    @apply top-1;
+    @apply top-1 absolute;
   }
   .admin-list_item {
     @apply w-11/12 mt-4;
   }
   .admin-list_data {
-    @apply my-4 mx-0 flex-row;
+    @apply my-4 mx-0 flex-row justify-between;
   }
   .admin-list_img {
     @apply w-20 sm:w-52;
@@ -110,6 +113,33 @@
   }
   .container {
     @apply w-full;
+  }
+  .comment {
+    @apply my-2 p-4 rounded-3xl bg-tertiarygroup  relative;
+  }
+  .comment-user {
+    @apply mb-1 justify-start text-base text-left flex-row font-bold;
+  }
+  .comment-user_img {
+    @apply m-0 block w-20 rounded-full border-solid border-black border-4;
+  }
+  .comment-user_name {
+    @apply ml-2 text-lg text-white;
+  }
+  .comment_date {
+    @apply w-1/3 m-2 p-1 self-end text-center font-bold;
+  }
+  .comment-btn_delete {
+    @apply bg-white text-red-600 py-1 px-2 rounded-full top-2 right-2 absolute hover:brightness-50;
+  }
+  .comment_content {
+    @apply w-full;
+  }
+  .comment-form {
+    @apply my-3 py-3 rounded-2xl font-extrabold;
+  }
+  .comment-form_btn {
+    @apply hover:-translate-y-1 hover:scale-90 hover:bg-gray-300 duration-300;
   }
   .limit {
     @apply sm:w-[500px] md:w-[670px] lg:w-[700px];
@@ -138,6 +168,15 @@
   .form-control {
     @apply mt-2;
   }
+  .home {
+    @apply lg:flex-row-reverse;
+  }
+  .home-aside {
+    @apply sm:w-3/4 lg:w-3/4 flex self-start;
+  }
+  .home-aside_info {
+    @apply w-full my-4 border-solid border-2 border-black;
+  }
   .home-img {
     @apply hidden sm:flex  my-3 w-96 h-96;
   }
@@ -158,6 +197,18 @@
   }
   .navigation-btn_icon {
     @apply w-4 mr-2;
+  }
+  .nofound-title {
+    @apply text-2xl font-extrabold;
+  }
+  .nofound-img {
+    @apply w-8/12;
+  }
+  .nofound-btn {
+    @apply text-white bg-green-600 text-lg;
+  }
+  .nofound-txt {
+    @apply text-xl;
   }
   .pagination {
     @apply mt-3 mb-8;
@@ -181,7 +232,7 @@
     @apply h-[420px] sm:h-[470px] md:h-[570px] lg:h-[600px]  my-2 bg-white border-black border-solid border-2 relative rounded-lg;
   }
   .postcard-a {
-    @apply absolute right-0 left-0 bottom-6;
+    @apply absolute w-full right-0 left-0 bottom-6;
   }
   .postcard {
     @apply cursor-pointer    p-4 w-56 h-96 sm:w-11/12 sm:h-fit   my-0 sm:my-3;
@@ -269,8 +320,5 @@
   }
   .sign-form--btn {
     @apply bg-blue-400  border-hidden   text-white p-3 my-3;
-  }
-  .succes {
-    @apply text-green-500;
   }
 }
