--- a/Groupomania/src/style.css
+++ b/Groupomania/src/style.css
@@ -154,7 +154,7 @@
     @apply top-0 left-0 right-0 bottom-0 w-screen fixed h-screen bg-slate-400 bg-opacity-50;
   }
   .likes-modal_content {
-    @apply bg-white p-12 rounded-xl blur-0 w-1/2;
+    @apply bg-white p-12 rounded-xl blur-0 w-3/4 sm:w-1/2;
   }
   .likes-modal_link {
     @apply w-36;
@@ -268,7 +268,7 @@
     @apply hidden  sm:flex sm:w-3 sm:ml-2;
   }
   .post-form_create {
-    @apply pt-4 max-w-2xl w-full rounded-3xl;
+    @apply mt-8 pt-4 max-w-2xl w-full rounded-3xl;
   }
   .preview {
     @apply relative border-dashed border-white border-4 rounded-lg my-3 w-52 h-44 sm:w-96 sm:h-72;
